--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,15 +24,14 @@ jobs:
       run: |
         sudo apt update
         sudo apt install -y zip unzip openjdk-17-jdk python3-pip
-        pip install buildozer cython
+        pip install --upgrade buildozer cython
 
-    - name: Initialize and build APK
+    - name: Build APK
       run: |
-        cd $GITHUB_WORKSPACE
         buildozer android debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v3
+    - name: Upload APK artifact
+      uses: actions/upload-artifact@v4
       with:
-        name: app-debug.apk
+        name: financaspro-debug.apk
         path: bin/*.apk
